--- a/diary/src/App.css
+++ b/diary/src/App.css
@@ -11,6 +11,7 @@
 .DiaryEditor input,
 .DiaryEditor textarea {
   width: 100%;
+  border-radius: 10px;
 }
 
 .DiaryEditor textarea {
@@ -28,4 +29,5 @@
   padding: 10px 0;
   font-size: 18px;
   cursor: pointer;
+  border-radius: 12px;
 }
