--- a/diary/src/App.css
+++ b/diary/src/App.css
@@ -2,10 +2,10 @@
   width: 80%;
   margin: 50px auto 0;
   padding: 30px;
-  box-shadow: inset 8px 8px 16px #d9d9d9, inset -8px -8px 16px #ffffff;
+  box-shadow: 14px 14px 28px #d9d9d9, -14px -14px 28px #ffffff;
   background: #ffffff;
   text-align: center;
-  border-radius: 33px;
+  border-radius: 20px;
 }
 
 .DiaryEditor input,
@@ -30,4 +30,48 @@
   font-size: 18px;
   cursor: pointer;
   border-radius: 12px;
+}
+
+/* List */
+.DiaryList {
+  width: 80%;
+  margin: 50px auto 0;
+  padding: 30px;
+  box-shadow: 35px 35px 70px #d9d9d9, -35px -35px 70px #ffffff;
+  background: #ffffff;
+  border-radius: 20px;
+}
+
+.DiaryList h2,
+.DiaryList h3 {
+  text-align: center;
+}
+
+.DiaryList .DiaryItem {
+  padding: 20px;
+  box-shadow: 14px 14px 28px #d9d9d9, -14px -14px 28px #ffffff;
+  background: #ffffff;
+  border-radius: 10px;
+}
+
+.DiaryList .DiaryItem + .DiaryItem {
+  margin-top: 20px;
+}
+
+.DiaryList .info_top {
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.DiaryList .date {
+  display: block;
+  margin-top: 10px;
+  color: #666;
+}
+
+.DiaryList .content {
+  margin-top: 10px;
+  padding: 10px;
+  border-top: 1px solid #999;
 }
